fix mid alignment and add wip about me/projects

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -37,7 +37,6 @@ body {
     height: auto;
     min-height: 50vh;
     font-size: 1.5rem;
-    margin-right:-60px;
     z-index: 9999;
 }
 
